@@ -1,7 +1,7 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.handler.intervener;
 
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.ObjectUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
@@ -15,7 +15,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.intevener.
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.IntervenerService;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerConstant.ADD_INTERVENER_FOUR_CODE;
@@ -31,8 +30,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.IntervenerC
 @Service
 public class IntervenersAboutToSubmitHandler extends FinremCallbackHandler {
     private final IntervenerService service;
-    private static final List<String> ADD_OPERATION_CODES = Arrays.asList(ADD_INTERVENER_ONE_CODE, ADD_INTERVENER_TWO_CODE, ADD_INTERVENER_THREE_CODE, ADD_INTERVENER_FOUR_CODE);
-    private static final List<String> DELETE_OPERATION_CODES = Arrays.asList(DEL_INTERVENER_ONE_CODE, DEL_INTERVENER_TWO_CODE, DEL_INTERVENER_THREE_CODE, DEL_INTERVENER_FOUR_CODE);
+    private static final List<String> ADD_OPERATION_CODES = List.of(ADD_INTERVENER_ONE_CODE, ADD_INTERVENER_TWO_CODE, ADD_INTERVENER_THREE_CODE, ADD_INTERVENER_FOUR_CODE);
+    private static final List<String> DELETE_OPERATION_CODES = List.of(DEL_INTERVENER_ONE_CODE, DEL_INTERVENER_TWO_CODE, DEL_INTERVENER_THREE_CODE, DEL_INTERVENER_FOUR_CODE);
 
     public IntervenersAboutToSubmitHandler(FinremCaseDetailsMapper finremCaseDetailsMapper,
                                            IntervenerService service) {
@@ -59,16 +58,15 @@ public class IntervenersAboutToSubmitHandler extends FinremCallbackHandler {
         log.info("selected operation choice {} for intervener {} for Case ID: {}",
             selectedOperationCode, caseData.getIntervenersList().getValueCode(), caseId);
         List<String> errors = new ArrayList<>();
+        IntervenerWrapper intervener = getIntervenerWrapper(caseData, selectedOperationCode);
 
         if (ADD_OPERATION_CODES.contains(selectedOperationCode)) {
-            IntervenerWrapper intervener = getIntervenerWrapper(caseData, selectedOperationCode);
             if (isIntervenerPostCodeMissing(intervener)) {
                 errors.add("Postcode field is required for the intervener.");
             } else {
                 service.updateIntervenerDetails(intervener, errors, callbackRequest);
             }
         } else if (DELETE_OPERATION_CODES.contains(selectedOperationCode)) {
-            IntervenerWrapper intervener = getIntervenerWrapper(caseData, selectedOperationCode);
             service.removeIntervenerDetails(intervener, errors, caseData, caseId);
         } else {
             throw new IllegalArgumentException("Invalid operation code: " + selectedOperationCode);
@@ -80,7 +78,7 @@ public class IntervenersAboutToSubmitHandler extends FinremCallbackHandler {
 
     private boolean isIntervenerPostCodeMissing(IntervenerWrapper intervener) {
         String postCode = intervener.getIntervenerAddress().getPostCode();
-        return ObjectUtils.isEmpty(postCode);
+        return StringUtils.isEmpty(postCode);
     }
 
     private IntervenerWrapper getIntervenerWrapper(FinremCaseData caseData, String selectedOperationCode) {
